# CMakeList.txt : CMake project for algorithms, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("algorithms")

# Add source to this project's executable.
add_executable (algorithms "algorithms.cpp" "algorithms.h")

# TODO: Add tests and install targets if needed.
